# FAB-meets-diffME

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements_screenshot_20241117.txt
FABdiffME/flow/: build_flow.py  evaluate_flow.py  spline_flow.py
FABdiffME/sampling/: metrics.py
FABdiffME/targets/: crossed_ring.py  ee_to_mumu.py  gaussian.py  lambdac.py  madjax_target.py  pi1300.py  target_util.py
FABdiffME/targets/madjax_ee_to_mumu/model/: aloha_methods.py  parameters.py
FABdiffME/targets/madjax_ee_to_mumu/processes/: all_processes.py
FABdiffME/targets/madjax_ee_to_ttbar/model/: aloha_methods.py  parameters.py
FABdiffME/targets/madjax_ee_to_ttbar/processes/: all_processes.py
FABdiffME/train/: generic_training_loop.py  init_and_step_state.py
FABdiffME/utils/: config.py  generate_samples_2D.py  load_data.py  loggers.py  nets.py  plot.py  setup_eval_and_plot_fns.py
examples/: example_normalizing_flow.py  example_vegas.py
paper_experiments/2d/lambdac/fkld/0/: config_fkld.yaml
paper_experiments/2d/lambdac/fkld/1/: config_fkld.yaml
paper_experiments/2d/lambdac/fkld/2/: config_fkld.yaml
paper_experiments/2d/lambdac/rkld/0/: config_rkld.yaml
paper_experiments/2d/lambdac/rkld/1/: config_rkld.yaml
paper_experiments/2d/lambdac/rkld/2/: config_rkld.yaml
paper_experiments/2d/lambdac/vegas/0/: config_vegas.yaml
paper_experiments/2d/lambdac/vegas/1/: config_vegas.yaml
scripts/: generate_data_2D.py  preprocess_lhe_files.py
tests/targets/: crossed_ring_test.ipynb  ee_to_mumu_test.ipynb  gaussian_test.ipynb  lambdac_test.ipynb  pi1300_test.ipynb  test_load_targets.py  test_madjax_target.py
(+22 files in other folders)
